Updating all endpoints to have an additional path parameter - system. The system parameter is an identifier for which table the log entry will be stored in, or retrieved from.
