# nodejs-server-server/api/swagger.yaml
@@ -6,7 +6,7 @@ info:
   version: "1.0.0"
   title: "DataLogger API"
 paths:
-  /log:    
+  /log/{system}:    
     post:
       summary: "Create a new log entry."
       description: "Optional extended description in CommonMark or HTML."
@@ -16,6 +16,11 @@ paths:
       produces:
       - "application/json"
       parameters:
+      - name: "system"
+        in: "path"
+        description: "Name of the system this log entry is for"
+        required: true
+        type: "string"
       - name: "entry"
         in: "body"        
         required: true
@@ -26,7 +31,7 @@ paths:
           description: "A log entry is successfully made and nothing is returned."
       x-swagger-router-controller: "Default"
     x-swagger-router-controller: "entry"
-  /log/{timestamp}:
+  /log/{system}/{timestamp}:
     get:
       summary: "Get all logs after the provided timestamp"
       description: "Optional extended description in CommonMark or HTML."
@@ -35,6 +40,12 @@ paths:
       produces:
       - "application/json"
       parameters:
+      - name: "system"
+        in: "path"
+        description: "Only log entries for this system will be returned"
+        required: true
+        type: "string"
+        format: "string"
       - name: "timestamp"
         in: "path"        
         description: "Only log entries whose timestamp comes after this one will be returned"
